--- a/task10/css/style.css
+++ b/task10/css/style.css
@@ -2,14 +2,14 @@
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
-	padding: 0;
+	padding: 20px;
 	margin: 0;
-
+	align-items: center; 
 }
 li{
 	width: 150px;
 	border:2px solid #f00;
-	margin: 20px;
+	margin-top: 20px;
 	order:1;
 	list-style-type:none;
 }
@@ -25,11 +25,6 @@ li{
 .fourth{
 	height: 200px;
 	border-color: #0f0;
-}
-@media (min-width: 641px){
-	.container{
-		align-items: center; 
-	}
 }
 @media(max-width: 640px){
 	.container{
